--- a/mainframe-service/pom.xml
+++ b/mainframe-service/pom.xml
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<docker.image.prefix>ckurze</docker.image.prefix>
+		<docker.image.prefix>fredfav</docker.image.prefix>
 	</properties>
 
 	<dependencies>
@@ -26,9 +26,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>12.1.0</version>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>12.2.0.1</version>
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
